# All rights reserved.

# LUA test CMake build script.

LIST(APPEND LUATEST_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
)

LIST(APPEND LUATEST_HEADERS
	"${CMAKE_CURRENT_SOURCE_DIR}/main.hpp"
)

ADD_EXECUTABLE(lua_test ${LUATEST_SOURCES} ${LUATEST_HEADERS})
TARGET_LINK_LIBRARIES(lua_test LINK_PUBLIC ${LUAJIT_LIBRARIES})



# Installation stuff.

#CONFIGURE_FILE (foo.lua CMAKE_RUNTIME_OUTPUT_DIRECTORY COPYONLY)
FILE (COPY unit_test_2.lua DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
#INSTALL(FILES foo.lua DESTINATION MAKE_RUNTIME_OUTPUT_DIRECTORY)
